<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/popup_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    android:gravity="center"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingTop="64dp"
    android:paddingBottom="64dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_popup"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingTop="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingBottom="0dp">

                <TextView
                    android:id="@+id/headerText"
                    android:text="@string/headerText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-condensed-light"
                    android:layout_gravity="center"
                    />

                <CheckBox
                    android:id="@+id/duplicateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/copy"
                    android:button="@drawable/ic_copy"
                    android:buttonTint="@color/white"
                    android:gravity="center"
                    android:backgroundTint="@color/transparent"
                    android:layout_marginEnd="@dimen/fab_margin"
                    />

                <CheckBox
                    android:id="@+id/enabledCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:buttonTint="@color/white"
                    android:gravity="center"
                    android:contentDescription="@string/checkbox"
                    android:backgroundTint="@android:color/transparent"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/line0"
                app:layout_constraintTop_toBottomOf="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/fab_margin"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight=".6"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/settingsImg"
                        android:contentDescription="@string/imgDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="104dp"
                        android:layout_gravity="center"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fab_margin">

                    <Button
                        android:id="@+id/default_button"
                        android:text="@string/shapeButton"
                        style="@style/buttonStyle"
                        android:layout_marginBottom="8dp"
                        android:textSize="16sp"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/img_button"
                            android:text="@string/setImage"
                            style="@style/buttonStyle"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="4dp"
                            android:textSize="16sp"
                            />

                        <!--<Button
                            android:id="@+id/gif_button"
                            android:text="@string/setGif"
                            style="@style/buttonStyle"
                            android:layout_marginStart="4dp"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:textSize="16sp"
                            />-->

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/hrTop"
                app:layout_constraintTop_toBottomOf="@+id/line0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/highlight_light"
                />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@+id/hrTop"
                app:layout_constraintBottom_toTopOf="@+id/hrBottom"
                android:overScrollMode="ifContentScrolls">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/fab_margin"
                    android:paddingBottom="@dimen/fab_margin">

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        android:gravity="center">

                        <TextView
                            android:text="@string/setColor"
                            style="@style/popupTextStyle"
                            />

                        <Button
                            android:id="@+id/colorButton"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:layout_weight=".2"
                            android:layout_gravity="center"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        android:gravity="center"
                        >

                        <TextView
                            android:text="@string/useColor"
                            style="@style/popupTextStyle"
                            />

                        <Switch
                            android:id="@+id/useColSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/fab_margin"
                            android:layout_gravity="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        android:paddingBottom="@dimen/fab_margin"
                        >

                        <TextView
                            android:text="@string/changeOnBounce"
                            style="@style/popupTextStyle"
                            />

                        <Switch
                            android:id="@+id/cobSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/fab_margin"
                            android:layout_gravity="center" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        >

                        <TextView
                            android:id="@+id/sizeWord"
                            android:text="@string/size"
                            style="@style/popupTextStyle"
                            android:layout_weight="0.4"
                            />

                        <TextView
                            android:id="@+id/sizeText"
                            style="@style/popupTextStyle"
                            android:layout_weight="0.4"
                            android:textStyle="italic"
                            android:text="@string/objSize"
                            android:textAlignment="center"
                            />

                        <SeekBar
                            android:id="@+id/sbSize"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/line5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        >

                        <TextView
                            android:id="@+id/SpeedWord"
                            android:text="@string/speed"
                            style="@style/popupTextStyle"
                            android:layout_weight="0.4"
                            />

                        <TextView
                            android:id="@+id/speedText"
                            style="@style/popupTextStyle"
                            android:layout_weight="0.4"
                            android:textStyle="italic"
                            android:text="@string/objVelocity"
                            android:textAlignment="center"
                            />
                        <SeekBar
                            android:id="@+id/sbSpeed"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        >

                        <TextView
                            android:id="@+id/angleWord"
                            android:text="@string/angle"
                            style="@style/popupTextStyle"
                            android:layout_weight="0.4"
                            />

                        <TextView
                            android:id="@+id/angleText"
                            style="@style/popupTextStyle"
                            android:layout_weight="0.4"
                            android:textStyle="italic"
                            android:text="@string/objAngle"
                            android:textAlignment="center"
                            />

                        <SeekBar
                            android:id="@+id/sbAngle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/line7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/fab_margin"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        >

                        <TextView
                            android:text="@string/useGravity"
                            style="@style/popupTextStyle"
                            />

                        <Switch
                            android:id="@+id/gravitySwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/fab_margin"
                            android:layout_gravity="center" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        >

                        <TextView
                            android:text="@string/useShadow"
                            style="@style/popupTextStyle"
                            />

                        <Switch
                            android:id="@+id/shadowSwitch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/fab_margin"
                            android:layout_gravity="center" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        android:paddingTop="@dimen/fab_margin"
                        >

                        <TextView
                            android:text="@string/flipX"
                            style="@style/popupTextStyle"
                            />

                        <Switch
                            android:id="@+id/flipX"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/fab_margin"
                            android:layout_gravity="center" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/fab_margin"
                        android:paddingEnd="@dimen/fab_margin"
                        >

                        <TextView
                            android:text="@string/flipY"
                            style="@style/popupTextStyle"
                            />

                        <Switch
                            android:id="@+id/flipY"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/fab_margin"
                            android:layout_gravity="center" />


                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

            <View
                android:id="@+id/hrBottom"
                app:layout_constraintBottom_toTopOf="@+id/line9"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/highlight_light"
                />

            <LinearLayout
                android:id="@+id/line9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="@dimen/fab_margin"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/saveButton"
                    style="@style/buttonStyle"
                    android:text="@string/saveButton"
                    android:textSize="25sp"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/buttonStyle"
                    android:text="@string/cancel"
                    android:textSize="25sp" />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>